# symphony-c2

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  sync-proto.sh
commons/: Cargo.toml  README.md  build.rs  types.d.ts
commons/proto/: simulation.proto
commons/src/: lib.rs  types.rs
proto/: base.proto
symphony-conducter/: Cargo.toml
symphony-conductor/: Cargo.toml
symphony-desktop/: .env.example  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
symphony-desktop/src/: App.css  App.tsx  main.tsx
symphony-desktop/src-tauri/: Cargo.toml  tauri.conf.json
symphony-desktop/src-tauri/src/: lib.rs  main.rs
symphony-desktop/src/components/: constants.ts  left-sidebar.tsx  object-list-sidebar.tsx  object-list.tsx  selection-sidebar.tsx  top-bar.tsx
symphony-desktop/src/components/left-sidebar/: constants.ts  designation-filter.tsx  designation-section.tsx  object-card.tsx  searchbar.tsx  sidebar-content.tsx  sidebar-header.tsx  utils.ts  (+1 more)
symphony-desktop/src/hooks/: icons.ts  useCesiumObjects.ts  useObjectSelection.ts
symphony-desktop/src/lib/: colors.ts  constants.ts  icon-assets.ts  proto-helpers.ts  proto_api.ts  ulid.ts  utils.ts
symphony-desktop/src/map/: cesium-map.tsx
symphony-desktop/src/stores/: objectsStore.ts
symphony-overture/: .env  package.json  pnpm-lock.yaml  vite.config.ts
symphony-overture/src/: App.tsx
symphony-overture/src/components/: cesium-map.tsx  right-sidebar.tsx
symphony-types/: Cargo.toml  build.rs
symphony-types/proto/: base.proto
symphony-types/src/: lib.rs
(+15 files in other folders)
